tests/neg-macros/quote-error-2/Test_2.scala
import Macro_1._

object Test_2 {
  foo(true)
  foo(false) // error: foo cannot be called with false
}
